--- a/src/ChatApp/Features/_ViewImports.cshtml
+++ b/src/ChatApp/Features/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ChatApp
 @using ChatApp.Data
 @using Microsoft.AspNetCore.Identity
+@using static ChatApp.Helpers.UrlHelperExt
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
