--- a/src/ChatApp/Features/Room/Views/_Layout.cshtml
+++ b/src/ChatApp/Features/Room/Views/_Layout.cshtml
@@ -1,17 +1,16 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="ChatApp" ng-controller="RoomController as RoomCtrl">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ChatApp</title>
+    <title ng-bind="RoomCtrl.c.room.name + ' - ChatApp'"></title>
     @await Html.PartialAsync("_StylesPartial")
 </head>
 <body>
     @await Html.PartialAsync("_NavbarPartial")
-    <div class="container body-content">
+    <div class="container-fluid body-content">
         @RenderBody()
     </div>
-
     @await Html.PartialAsync("_ScriptsPartial")
     @RenderSection("scripts", required: false)
 </body>
