--- a/src/ChatApp/Features/Room/Views/_Layout.cshtml
+++ b/src/ChatApp/Features/Room/Views/_Layout.cshtml
@@ -1,9 +1,10 @@
 ﻿<!DOCTYPE html>
-<html ng-app="ChatApp" ng-controller="RoomController as RoomCtrl">
+<html ng-app="ChatApp" ng-controller="RoomController as RoomCtrl" ng-strict-di>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title ng-bind="RoomCtrl.c.room.name + ' - ChatApp'"></title>
+    <title ng-bind="c.room.name + ' - ChatApp'"></title>
+    <base href="/room" />
     @await Html.PartialAsync("_StylesPartial")
 </head>
 <body>
