--- a/src/ChatApp/Features/Room/Views/Index.cshtml
+++ b/src/ChatApp/Features/Room/Views/Index.cshtml
@@ -3,7 +3,7 @@
         <a class="media" ng-repeat="r in c.rooms" ng-click="RoomCtrl.SelectRoom(r)">
             <div class="media-left media-middle">
                 <span class="img-thumbnail">
-                    <img class="img-rounded" ng-src="@Url.ChatRoomAvatar("/"){{r.id}}" width="40" height="40" />
+                    <img class="img-rounded" ng-src="/ChatRoomAvatar/Get/{{r.id}}" width="30" height="30" />
                 </span>
             </div>
             <div class="media-body">
@@ -14,14 +14,14 @@
         </a>
     </div>
 </div>
-<div class="col-sm-8">
+<div class="col-sm-9">
     <div class="row"
          style="border-bottom:1px solid #ccc; background: #fff; z-index:99; height:36px;">
         <ul class="list-inline" style="padding-top:5px;">
             <li ng-repeat="m in c.room.members">
                 <span>
                     <img class="img-circle" width="20" height="20"
-                         ng-src="@Url.UserAvatar("/"){{ m.id }}" />
+                         ng-src="/UserAvatar/Get/{{ m.id }}" />
                 </span>
             </li>
         </ul>
@@ -35,7 +35,7 @@
                 <div class="media-left media-middle">
                     <span>
                         <img class="img-circle" width="30" height="30"
-                             ng-src="@Url.UserAvatar("/"){{ m.userId }}" />
+                             ng-src="/UserAvatar/Get/{{ m.userId }}" />
                     </span>
                 </div>
                 <div class="media-body">
@@ -54,9 +54,11 @@
             </div>
         </div>
     </div>
-    <div class="row" id="chat-form">
-        <form>
-            <textarea class="form-control"></textarea>
+    <div class="row" id="chat-form" ng-show="c.room.message != null">
+        <form name="chatForm" novalidate ng-submit="RoomCtrl.PostMessage()">
+            <textarea class="form-control" rows="1" ng-model="c.room.message.message" required></textarea>
+            <button class="btn btn-default"
+                ng-disabled="chatForm.$invalid || c.room.message.isPosting">GO</button>
         </form>
     </div>
 </div>
