--- a/src/ChatApp/Features/Room/Views/Index.cshtml
+++ b/src/ChatApp/Features/Room/Views/Index.cshtml
@@ -1,68 +1,74 @@
-﻿<div class="col-sm-2 hidden-xs">
-    <div class="media-list affix col-sm-2" style="padding-top:5px;">
-        <a class="media" ng-repeat="r in c.rooms" ng-click="RoomCtrl.SelectRoom(r)">
-            <div class="media-left media-middle">
-                <span class="img-thumbnail">
-                    <img class="img-rounded" ng-src="/ChatRoomAvatar/Get/{{r.id}}" width="30" height="30" />
-                </span>
-            </div>
-            <div class="media-body">
-                <div class="media-heading">
-                    <p ng-bind="r.name"></p>
+﻿<div>
+    <div class="col-sm-2 hidden-xs" class="sidebar">
+        <div class="affix col-sm-2" style="padding-top:5px;">
+            <div class="row">
+                <h4>Room</h4>
+                <div class="media-list">
+                    <a class="media" ng-repeat="r in c.rooms" ng-click="RoomCtrl.SelectRoom(r)">
+                        <div class="media-left media-middle">
+                            <span class="img-thumbnail">
+                                <img class="img-rounded" ng-src="/ChatRoomAvatar/Get/{{r.id}}" width="30" height="30" />
+                            </span>
+                        </div>
+                        <div class="media-body">
+                            <div class="media-heading">
+                                <p ng-bind="r.name"></p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
-        </a>
-    </div>
-</div>
-<div class="col-sm-9">
-    <div class="row"
-         style="border-bottom:1px solid #ccc; background: #fff; z-index:99; height:36px;">
-        <ul class="list-inline" style="padding-top:5px;">
-            <li ng-repeat="m in c.room.members">
-                <span>
-                    <img class="img-circle" width="20" height="20"
-                         ng-src="/UserAvatar/Get/{{ m.id }}" />
-                </span>
-            </li>
-        </ul>
-    </div>
-    <div class="row" id="chat-messages"
-        chat-room="c.room"
-        chat-room-change="RoomCtrl.ChangeRoom()"
-        old-messages="RoomCtrl.GetOldmessages()">
-        <div class="media-list">
-            <div class="media" ng-repeat="m in c.room.messages">
-                <div class="media-left media-middle">
-                    <span>
-                        <img class="img-circle" width="30" height="30"
-                             ng-src="/UserAvatar/Get/{{ m.userId }}" />
-                    </span>
-                </div>
-                <div class="media-body">
-                    <div class="media-heading small">
-                        <span>
-                            <span ng-bind="m.id"></span>
-                            <span ng-bind="m.userFirstName"></span>
-                            <span ng-bind="m.userLastName"></span>
-                        </span>
-                        <span>
-                            <time ng-bind="m.createdDate | date: 'yyyy/MM/dd HH:mm:ss'"></time>
-                        </span>
+            <div class="row">
+                <h4>Member</h4>
+                <div class="media-list">
+                    <div class="media" ng-repeat="m in c.room.members">
+                        <div class="media-left">
+                            <img class="img-circle" width="20" height="20"
+                                    ng-src="/UserAvatar/Get/{{ m.id }}" />
+                        </div>
                     </div>
-                    <div marked="m.message"></div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row" id="chat-form" ng-show="c.room.message != null">
-        <form name="chatForm" novalidate ng-submit="RoomCtrl.PostMessage()">
-            <textarea class="form-control" rows="1" ng-model="c.room.message.message" required></textarea>
-            <button class="btn btn-default"
-                ng-disabled="chatForm.$invalid || c.room.message.isPosting">GO</button>
-        </form>
+    <div class="col-sm-10">
+        <div class="row" id="chat-messages"
+            chat-room="c.room"
+            chat-room-change="RoomCtrl.ChangeRoom()"
+            old-messages="RoomCtrl.GetOldmessages()">
+            <div class="media-list message-list">
+                <div class="media message-item" ng-repeat="m in c.room.messages">
+                    <div class="media-left">
+                        <span>
+                            <img class="img-circle" width="30" height="30"
+                                ng-src="/UserAvatar/Get/{{ m.userId }}" />
+                        </span>
+                    </div>
+                    <div class="media-body message-body">
+                        <div class="media-heading small">
+                            <span>
+                                <span ng-bind="m.id"></span>
+                                <span ng-bind="m.userFirstName"></span>
+                                <span ng-bind="m.userLastName"></span>
+                            </span>
+                            <span>
+                                <time ng-bind="m.createdDate | date: 'yyyy/MM/dd HH:mm:ss'"></time>
+                            </span>
+                        </div>
+                        <div marked="m.message"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row" id="chat-form" ng-show="c.room.message != null">
+            <form name="chatForm" novalidate ng-submit="RoomCtrl.PostMessage()">
+                <textarea class="form-control" rows="1" ng-model="c.room.message.message" required></textarea>
+                <button class="btn btn-default"
+                    ng-disabled="chatForm.$invalid || c.room.message.isPosting">GO</button>
+            </form>
+        </div>
     </div>
 </div>
-
 @section Scripts {
     <script>
         $(function () {
@@ -79,11 +85,13 @@
     </script>
     <environment names="Development">
         <script src="~/lib/angular/angular.js"></script>
+        <script src="~/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
         <script src="~/lib/marked/lib/marked.js"></script>
         <script src="~/lib/angular-marked/dist/angular-marked.js"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="~/lib/angular/angular.min.js"></script>
+        <script src="~/lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
         <script src="~/lib/marked/marked.min.js"></script>
         <script src="~/lib/angular-marked/dist/angular-marked.min.js"></script>
     </environment>
