--- a/src/ChatApp/wwwroot/css/room/main.css
+++ b/src/ChatApp/wwwroot/css/room/main.css
@@ -1,15 +1,71 @@
+* {
+  box-sizing: border-box;
+}
+#chat-sidebar {
+  min-height: 100vh;
+  padding: 0 10px 0 0;
+  background: #fff;
+  left: 0;
+  border-right: 1px solid #eee;
+  z-index: 999;
+}
+#chat-sidebar .chat-sidebar-content {
+  background: #fff;
+  padding-left: 10px;
+}
+#chat-sidebar .chat-sidebar-item-rooms .media {
+  margin: 0;
+  opacity: 0.7;
+  cursor: pointer;
+}
+#chat-sidebar .chat-sidebar-item-rooms .media.active {
+  opacity: 1;
+}
+#chat-sidebar .chat-sidebar-item-rooms .media.active .toggle-tooltip {
+  visibility: visible;
+}
+#chat-sidebar .chat-sidebar-item-rooms .media .toggle-tooltip {
+  border-radius: 50%;
+  padding: 5px;
+  opacity: 0.6;
+  visibility: hidden;
+}
+#chat-sidebar .chat-sidebar-item-rooms .media .toggle-tooltip:hover {
+  opacity: 1;
+}
 #chat-messages::-webkit-scrollbar {
   width: 10px;
   background: transparent;
 }
-#chat-messages::-webkit-scrollbar-thumb {
-  background: #ccc;
+#chat-messages::-webkit-scrollbar-thumb,
+#chat-messages thumb {
+  background: rgba(200, 200, 200, 0.5);
   border-radius: 10px;
 }
-.message-list .message-item {
+#chat-messages .message-list .message-item {
   margin: 0;
   padding: 10px;
 }
-.message-list .message-item .message-body img {
+#chat-messages .message-list .message-item .message-body img {
   width: 90%;
+}
+#chat-form {
+  position: relative;
+  padding: 10px 10px 0 10px;
+  box-sizing: border-box;
+}
+#chat-form textarea {
+  width: 100%;
+  max-width: 100%;
+  height: 2.5em;
+  resize: none;
+}
+#chat-form button {
+  position: absolute;
+  bottom: -5px;
+  opacity: 1;
+  right: 0;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
 }
