--- a/src/ChatApp/wwwdev/less/room/main.less
+++ b/src/ChatApp/wwwdev/less/room/main.less
@@ -1,53 +1,5 @@
 * {
     box-sizing: border-box;
-}
-
-#chat-sidebar {
-    min-height: 100vh;
-    padding: 0 10px 0 0;
-    background: #fff;
-    left: 0;
-    border-right: 1px solid #eee;
-    z-index: 999;
-
-    .chat-sidebar-content {
-        background: #fff;
-        padding-left: 10px;
-    }
-
-    .chat-sidebar-item-rooms {
-        .media {
-            margin: 0;
-            opacity: 0.7;
-            cursor: pointer;
-
-            &.active {
-                opacity: 1;
-
-                .toggle-tooltip {
-                    visibility: visible;
-                }    
-            }
-
-            .toggle-tooltip {
-                border-radius: 50%;
-                padding: 5px;
-                opacity: 0.6;
-                visibility: hidden;
-
-                &:hover {
-                    opacity: 1;
-                }
-            }
-        }
-    }
-
-    chat-sidebar-item-members {
-
-    }
-}
-
-#chat-messages {
 
     &::-webkit-scrollbar {
         width: 10px;
@@ -58,7 +10,82 @@
         background: rgba(200, 200, 200, 0.5);
         border-radius: 10px;
     }
+}
+body {
+    overflow: hidden;
+}
 
+#chat-sidebar-wrapper {
+    height: calc(~'100vh - 50px');
+    z-index: 1000;
+
+    .chat-sidebar-toggle {
+        top: 50%;
+        display: block;
+        position: absolute;
+        margin-top: -17.5px - 25px;
+        width: 35px;
+        height: 35px;
+        border-radius: 50%;
+        color: #ccc;
+        font-size: 1.5em;
+
+        &.chat-sidebar-open {
+            left: 0;
+            margin-left: -17.5px;
+        }
+
+        &.chat-sidebar-close {
+            right: 0;
+        }
+    }
+
+    #chat-sidebar {
+        padding: 0 10px 0 10px;
+        background: #fff;
+        left: 0;
+        border-right: 1px solid #eee;
+
+        .chat-sidebar-content {
+            padding-bottom: 10px; 
+            background: #fff;
+            padding-left: 10px;
+            overflow-y: auto;
+            height: calc(~'100vh - 50px');
+        }
+
+        .chat-sidebar-item-rooms {
+            .media {
+                margin: 0;
+                opacity: 0.7;
+                cursor: pointer;
+
+                &.active {
+                    opacity: 1;
+                    cursor: default;
+
+                    .toggle-tooltip {
+                        visibility: visible;
+                    }    
+                }
+
+                .toggle-tooltip {
+                    cursor: pointer;
+                    border-radius: 50%;
+                    padding: 5px;
+                    opacity: 0.6;
+                    visibility: hidden;
+
+                    &:hover {
+                        opacity: 1;
+                    }
+                }
+            }
+        }
+    }
+}
+
+#chat-messages {
     .message-list {
         .message-item {
             margin: 0;
