--- a/src/ChatApp/wwwdev/less/room/main.less
+++ b/src/ChatApp/wwwdev/less/room/main.less
@@ -100,7 +100,7 @@ body {
     }
 }
 
-#chat-form {
+#chat-messages-form {
     position: relative;
     padding: 10px 10px 0 10px;
     box-sizing: border-box;
