--- a/src/ChatApp/wwwroot/templates/room/chat-messages.html
+++ b/src/ChatApp/wwwroot/templates/room/chat-messages.html
@@ -17,7 +17,7 @@
                     <time ng-bind="m.createdDate | date: 'yyyy/MM/dd HH:mm:ss'"></time>
                 </span>
             </div>
-            <div marked="m.message"></div>
+            <div marked="m.message" compile="true"></div>
         </div>
     </div>
 </div>
