--- a/src/ChatApp/wwwdev/less/room/main.less
+++ b/src/ChatApp/wwwdev/less/room/main.less
@@ -1,3 +1,9 @@
+
+@keyframes fadeIn {
+    0% {opacity: 0}
+    100% {opacity: 1}
+}
+
 * {
     box-sizing: border-box;
 
@@ -11,6 +17,7 @@
         border-radius: 10px;
     }
 }
+
 body {
     overflow: hidden;
 }
@@ -24,8 +31,8 @@ body {
         display: block;
         position: absolute;
         margin-top: -17.5px - 25px;
-        width: 35px;
-        height: 35px;
+        width: 42px;
+        height: 42px;
         border-radius: 50%;
         color: #ccc;
         font-size: 1.5em;
@@ -52,6 +59,22 @@ body {
             padding-left: 10px;
             overflow-y: auto;
             height: calc(~'100vh - 50px');
+
+            .toggle-tooltip {
+                cursor: pointer;
+                border-radius: 50%;
+                padding: 5px;
+                opacity: 0.6;
+                visibility: hidden;
+
+                &:hover {
+                    opacity: 1;
+                }
+            }
+
+            .media {
+                padding: 3px;
+            }
         }
 
         .chat-sidebar-item-rooms {
@@ -68,18 +91,6 @@ body {
                         visibility: visible;
                     }    
                 }
-
-                .toggle-tooltip {
-                    cursor: pointer;
-                    border-radius: 50%;
-                    padding: 5px;
-                    opacity: 0.6;
-                    visibility: hidden;
-
-                    &:hover {
-                        opacity: 1;
-                    }
-                }
             }
         }
     }
@@ -89,11 +100,18 @@ body {
     .message-list {
         .message-item {
             margin: 0;
-            padding: 10px;
+            padding: 10px 20px;
             
             .message-body {
+                word-break: break-word;
+                padding: 10px;
+
                 img {
-                    width: 90%;
+                    max-width: 100%;
+                    border: 1px solid #ccc;
+                    border-radius: 5px;
+                    padding: 3px;
+                    animation: fadeIn 1s ease 0s 1 normal;
                 }
             }
         }    
