--- a/src/ChatApp/wwwdev/less/room/main.less
+++ b/src/ChatApp/wwwdev/less/room/main.less
@@ -106,12 +106,18 @@ body {
                 word-break: break-word;
                 padding: 10px;
 
+                .chat-img-loading {
+                    height: 300px;
+                    opacity: 0;
+                }
+
                 img {
                     max-width: 100%;
+                    max-height: 300px;
                     border: 1px solid #ccc;
                     border-radius: 5px;
                     padding: 3px;
-                    animation: fadeIn 1s ease 0s 1 normal;
+                    //animation: fadeIn 1s ease 0s 1 normal;
                 }
             }
         }    
