--- a/src/ChatApp/Features/Room/Views/_Layout.cshtml
+++ b/src/ChatApp/Features/Room/Views/_Layout.cshtml
@@ -14,6 +14,7 @@
         @RenderBody()
     </div>
     @await Html.PartialAsync("_ScriptsPartial")
+    @await Html.PartialAsync("_RoomScriptsPartial")
     @RenderSection("scripts", required: false)
 </body>
 </html>
