Fix チャット画面 サイドバーが折りたたまれた状態のz-index問題

--- a/src/ChatApp/wwwroot/templates/room/sidebar.html
+++ b/src/ChatApp/wwwroot/templates/room/sidebar.html
@@ -1,4 +1,4 @@
-<div id="{{ctrl.selector}}-wrapper" class="affix {{ctrl.sidebarColClass()}}">
+<div id="{{ctrl.selector}}-wrapper" class="affix">
     <div class="affix hidden-xs {{ctrl.sidebarColClass()}}" id="{{ctrl.selector}}">
         <div class="{{ctrl.selector}}-content">
             <ng-transclude></ng-transclude>
