--- a/src/ChatApp/wwwroot/templates/room/sidebar-item-room.html
+++ b/src/ChatApp/wwwroot/templates/room/sidebar-item-room.html
@@ -1,6 +1,13 @@
 <div class="chat-sidebar-item chat-sidebar-item-rooms">
     <h4 class="title">
         <span>ルーム</span>
+        <span class="pull-right small" uib-dropdown dropdown-append-to-body>
+            <i class="glyphicon glyphicon-align-justify"
+                uib-dropdown-toggle></i>
+            <ul class="dropdown-menu" uib-dropdown-menu role="menu">
+                <li role="menuitem"><a href="#">Action</a></li>
+            </ul>
+        </span>
     </h4>
     <div class="media-list">
         <div class="media" ng-repeat="r in c.rooms"
@@ -13,8 +20,12 @@
             </div>
             <div class="media-body">
                 <div class="media-footer">
-                    <span class="pull-right">
-                        <i class="glyphicon glyphicon-option-horizontal toggle-tooltip"></i>
+                    <span class="pull-right" uib-dropdown dropdown-append-to-body>
+                        <i class="glyphicon glyphicon-option-horizontal toggle-tooltip"
+                            uib-dropdown-toggle></i>
+                        <ul class="dropdown-menu" uib-dropdown-menu role="menu">
+                            <li role="menuitem"><a href="#">Action</a></li>
+                        </ul>
                     </span>
                 </div>
                 <p ng-bind="r.name"></p>
