--- a/src/ChatApp/wwwroot/templates/room/sidebar-item-member.html
+++ b/src/ChatApp/wwwroot/templates/room/sidebar-item-member.html
@@ -12,6 +12,12 @@
                         <span>メンバー追加</span>
                     </a>
                 </li>
+                <li role="menuitem">
+                    <a ng-click="RoomCtrl.OpenRemoveMember()">
+                        <i class="glyphicon glyphicon-trash"></i>
+                        <span>メンバー削除</span>
+                    </a>
+                </li>
             </ul>
         </span>    
     </h4>
