--- a/src/ChatApp/wwwroot/css/room/main.css
+++ b/src/ChatApp/wwwroot/css/room/main.css
@@ -21,8 +21,12 @@
 body {
   overflow: hidden;
 }
+li[role="menuitem"] {
+  cursor: pointer;
+}
 #chat-sidebar-wrapper {
   height: calc(100vh - 50px);
+  padding-right: 0;
   z-index: 1000;
 }
 #chat-sidebar-wrapper .chat-sidebar-toggle {
@@ -44,13 +48,14 @@ body {
   right: 0;
 }
 #chat-sidebar-wrapper #chat-sidebar {
-  padding: 0 10px 0 10px;
+  padding: 0 0 0 10px;
   background: #fff;
   left: 0;
   border-right: 1px solid #eee;
 }
 #chat-sidebar-wrapper #chat-sidebar .chat-sidebar-content {
   padding-bottom: 10px;
+  padding-right: 8px;
   background: #fff;
   padding-left: 10px;
   overflow-y: auto;
@@ -61,12 +66,16 @@ body {
   border-radius: 50%;
   padding: 5px;
   opacity: 0.6;
-  visibility: hidden;
+  color: #666;
+  text-decoration: none;
 }
 #chat-sidebar-wrapper #chat-sidebar .chat-sidebar-content .toggle-tooltip:hover {
   opacity: 1;
 }
-#chat-sidebar-wrapper #chat-sidebar .chat-sidebar-content .media {
+#chat-sidebar-wrapper #chat-sidebar .chat-sidebar-content .media-list .toggle-tooltip {
+  visibility: hidden;
+}
+#chat-sidebar-wrapper #chat-sidebar .chat-sidebar-content .media-list .media {
   padding: 3px;
 }
 #chat-sidebar-wrapper #chat-sidebar .chat-sidebar-item-rooms .media {
