--- a/src/ChatApp/Features/Shared/_LoginPartial.cshtml
+++ b/src/ChatApp/Features/Shared/_LoginPartial.cshtml
@@ -7,10 +7,12 @@
           class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">
+                    <span>@UserManager.GetUserName(User).ToUpper()</span>
+                </a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log off</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link">LOGOUT</button>
             </li>
         </ul>
     </form>
