--- a/src/ChatApp/wwwroot/templates/room/sidebar-item-room.html
+++ b/src/ChatApp/wwwroot/templates/room/sidebar-item-room.html
@@ -6,7 +6,7 @@
                 uib-dropdown-toggle></a>
             <ul class="dropdown-menu" uib-dropdown-menu role="menu">
                 <li role="menuitem">
-                    <a href="javascript:void(0)">
+                    <a ng-click="RoomCtrl.OpenCreateRoom()">
                         <span class="glyphicon glyphicon-plus"></span>
                         <span>ルームの作成</span>
                     </a>
@@ -36,7 +36,7 @@
                                 </a>
                             </li>
                             <li role="menuitem" ng-show="r.isAdmin">
-                                <a href="javascript:void(0)">
+                                <a ng-click="RoomCtrl.OpenEditRoom()">
                                     <span class="glyphicon glyphicon-edit"></span>
                                     <span>ルームの編集</span>
                                 </a>
